<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/b_sheet_ExpandedToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingBottom="5dp"
        android:background="@color/secondaryColor"
        android:elevation="4dp">

        <ImageButton
            android:id="@+id/btnMinimizeToolbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:tint="@color/item_color"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_minimize" />

        <TextView
            android:id="@+id/txtCurrPlaying"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:fontFamily="@font/asap_regular"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/now_playing"
            android:textColor="@color/item_color"
            android:textSize="15dp" />

        <ImageButton
            android:id="@+id/btnSongList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:tint="@color/item_color"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_round_queue_music_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:background="@drawable/top_corner"
        android:backgroundTint="@color/bg_color"
        android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/musicCoverPic"
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/d7"
                android:layout_gravity="center_horizontal"
                android:elevation="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"/>

        <SeekBar
            android:id="@+id/controlSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:maxHeight="12dp"
            android:minHeight="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:progressTint="#8b14d0"
            android:progressBackgroundTint="@color/track_color"
            android:thumbTint="@color/item_color"
            android:progress="0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCurrentDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:fontFamily="@font/asap_regular"
                android:layout_weight="1"
                android:textColor="@color/whiteText" />

            <TextView
                android:id="@+id/txtTotalDuration"
                android:layout_width="wrap_content"
                android:fontFamily="@font/asap_regular"
                android:layout_height="wrap_content"
                android:text="05:00"
                android:textAlignment="viewEnd"
                android:textColor="@color/whiteText" />

        </LinearLayout>

        <!--        Text -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtSongName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:fontFamily="@font/asap_semibold"
                    android:layout_centerHorizontal="true"
                    android:singleLine="true"
                    android:text="@string/in_motion"
                    android:textColor="@color/textPrimary"
                    android:textSize="20dp" />

                <ToggleButton
                    android:id="@+id/btnFav"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/fav_selector"
                    android:layout_centerVertical="true"
                    android:textOff=""
                    android:textOn="" />

                <TextView
                    android:id="@+id/txtSongArtistName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtSongName"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:textSize="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/asap_regular"
                    android:focusableInTouchMode="true"
                    android:layout_marginLeft="10dp"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:layout_centerHorizontal="true"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/trent_renzor_and_atticus_ross"
                    android:textColor="@color/track_color" />

            </RelativeLayout>

            <!--        Bottom btn-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                android:gravity="bottom">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/prev"
                        android:layout_toLeftOf="@+id/playbtn"
                        android:layout_marginRight="15dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:cardBackgroundColor="@color/item_color"
                        app:cardElevation="8dp"
                        android:layout_centerVertical="true"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:id="@+id/btnPrevControl"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@android:color/transparent"
                            app:tint="@color/bg_color"
                            android:layout_gravity="center"
                            android:contentDescription="@string/previous_song"
                            android:src="@drawable/ic_round_skip_previous_24" />

                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/next"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        app:cardBackgroundColor="@color/item_color"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/playbtn"
                        app:cardCornerRadius="50dp">

                        <ImageView
                            android:id="@+id/btnNextControl"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:tint="@color/bg_color"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/next_song"
                            android:src="@drawable/ic_round_skip_next_24" />

                    </androidx.cardview.widget.CardView>

                    <RelativeLayout
                        android:id="@+id/playbtn"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginBottom="5dp"
                        android:alpha="0.9"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/gradient_btn">

                        <androidx.cardview.widget.CardView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            app:cardBackgroundColor="@color/secondaryColor"
                            android:layout_centerInParent="true"
                            app:cardElevation="15dp"
                            app:cardCornerRadius="50dp">

                            <ToggleButton
                                android:id="@+id/btnPlayPauseControl"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:background="@drawable/play_pause_selector"
                                android:backgroundTint="@color/item_color"
                                android:textOff=""
                                android:textOn="" />

                        </androidx.cardview.widget.CardView>

                    </RelativeLayout>


                        <ToggleButton
                            android:id="@+id/btnControlShuffle"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentBottom="true"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:background="@drawable/shuffle_selector"
                            android:textOff=""
                            android:textOn=""/>

                        <com.projects.SangeetMp3Player.uicomponents.RepeatTriStateButton
                            android:id="@+id/btnRepeatControl"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:clickable="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginRight="20dp"
                            android:layout_alignParentRight="true"
                            android:focusable="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="SANGEET"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:textSize="20dp"
                        android:textColor="#fff"
                        android:fontFamily="@font/asap_semibold"
                        android:letterSpacing="0.1"/>


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>